# xinput-viewer

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: lib.rs
