[package]
name = "xinput-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "dinput8"

[dependencies]
hudhook = { version = "0.6.5" }
once_cell = "1.19.0"
parking_lot = "0.12.1"

[dependencies.windows]
version = "0.54.0"
features = [
  "Win32_System_LibraryLoader", 
  "Win32_System_SystemServices", 
  "Win32_Foundation", 
  "Win32_UI_Input_XboxController", 
  "Win32_System_SystemInformation"
] 
